--- a/front-end-customer/signup.html
+++ b/front-end-customer/signup.html
@@ -7,23 +7,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RPLI Customer Login Portal</title>
+    <title>RPLI Customer Portal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- EDI System Company name is RPLI -->
-    <h1>RPLI Customer Portal</h1>
+    <h1>RPLI Customer Register Portal</h1>
     <p>RLPI is an EDI system that streamlines your business's needs. </p>
 
-    <!-- Customer Login -->
-    <h2>CUSTOMER LOGIN</h2>
+    <!-- Customer Regsiter -->
+    <h2>CUSTOMER REGISTER</h2>
     <form>
         Email<div><input id="email" type="text" placeholder="Type your email"></div>
         Password<div><input id="password" type="text" placeholder="Type your password"></div>
-        <div><a href="#">Forgot password?</a></div>
-        <div><button type="submit">LOGIN</button></div>
-        <p>Or Sign Up Using</p>
-        <div><a href="signup.html">SIGN UP</a></div>
+        Password<div><input id="password2" type="text" placeholder="Type your password again"></div>
+        <div><button type="submit">REGISTER</button></div>
+        <p>Already have an account?</p>
+        <div><a href="index.html">LOG IN</a></div>
     </form>
     
     <script src="app.js"></script>
